examples/failing/IntOutOfRange.purs
-- @shouldFailWith IntOutOfRange

module Main where

n :: Int
n = 35028715023
